Agregar permiso y Usuarios paginados

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
             <ul id="sidebarnav">
                 <li class="user-profile">
                     <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
-                      <img src="assets/images/users/profile.png"  alt="user" /><span class="hide-menu"> usuario.nombre  </span>
+                      <img src="assets/images/users/profile.png"  alt="user" /><span class="hide-menu"> {{ usuario.name }}  </span>
                     </a><!-- [src]="usuario.img | imagen" -->
                     <ul aria-expanded="false" class="collapse">
                         <li><a routerLinkActive="active" routerLink="/perfil">Perfil </a></li>
