--- a/src/app/pages/usuarios/usuarios.component.html
+++ b/src/app/pages/usuarios/usuarios.component.html
@@ -50,11 +50,11 @@
                             </td>
                             <td>
                                 <button class="btn btn-primary">
-                  <i class="fa fa-save"></i>
-                </button> &nbsp;
-                                <button class="btn btn-danger">
-                  <i class="fa fa-trash-o"></i>
-                </button>
+                                    <i class="fa fa-save"></i>
+                                </button> &nbsp;
+                                <button (click)="agregarPermisoUsuario( usuario.id, 'canAccessAccounts' )" class="btn btn-danger">
+                                    <i class="fa fa-key"></i>
+                                </button>
                             </td>
                         </tr>
                     </tbody>
