--- a/src/app/pages/usuarios/usuarios.component.html
+++ b/src/app/pages/usuarios/usuarios.component.html
@@ -46,7 +46,14 @@
                             <td>{{ usuario.id }}</td>
                             <td>{{ usuario.name }}</td>
                             <td>
-                                <li *ngFor="let claim of usuario.claims">{{ claim.type | json }}</li>
+                                <!-- <li *ngFor="let claim of usuario.claims">{{ claim.type | json }}</li> -->
+                                <angular2-multiselect [data]="dropdownList" [(ngModel)]="selectedItems" 
+                                    [settings]="dropdownSettings" 
+                                    (onSelect)="onItemSelect($event)" 
+                                    (onDeSelect)="OnItemDeSelect($event)"
+                                    (onSelectAll)="onSelectAll($event)"
+                                    (onDeSelectAll)="onDeSelectAll($event)">
+                                </angular2-multiselect>
                             </td>
                             <td>
                                 <button class="btn btn-primary">
